<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey">

                    <FrameLayout
                        android:id="@+id/frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="60dp"
                        android:paddingLeft="60dp"
                        android:paddingEnd="200dp"
                        android:paddingRight="200dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.example.google_book_app.ui.TwoByThreeRatioImageView
                            android:id="@+id/iv_thumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/thumbnail_description"
                            android:scaleType="centerCrop"
                            app:layout_collapseMode="parallax"
                            tools:src="@drawable/ic_baseline_image_24" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_detail_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_view"
                        android:paddingTop="@dimen/padding_view_small"
                        android:paddingRight="@dimen/padding_view"
                        android:paddingBottom="@dimen/padding_view_small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toStartOf="@+id/fab_favorite"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/frame"
                        tools:text="book title" />

                    <TextView
                        android:id="@+id/tv_detail_subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_view"
                        android:paddingLeft="@dimen/padding_view"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                        tools:text="@string/detail_subtitle_description" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_view"
                        android:onClick="onFavoriteClick"
                        android:src="@drawable/ic_baseline_favorite_border_24"
                        app:backgroundTint="@color/green"
                        app:layout_constraintBottom_toBottomOf="@+id/frame"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/frame" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            tools:context=".ui.detail.DetailActivity"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentPadding="@dimen/padding_view">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_author_label"
                            style="@style/OverviewLabelStyle"
                            android:layout_marginBottom="@dimen/margin_activity"
                            android:text="@string/author" />

                        <TextView
                            android:id="@+id/tv_author_text"
                            style="@style/BasicTextStyle"
                            android:textColor="@android:color/black"
                            tools:text="author name" />

                        <TextView
                            android:id="@+id/tv_description_label"
                            style="@style/OverviewLabelStyle"
                            android:layout_marginBottom="@dimen/margin_activity"
                            android:text="@string/description" />

                        <TextView
                            android:id="@+id/tv_description_text"
                            style="@style/BasicTextStyle"
                            android:textColor="@android:color/black"
                            tools:text="@string/no_description_available" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>